# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  04 Aug 2005; Martin Schlemmer <azarah@gentoo.org>:

    Update /sbin/rc to actually use init's single level, and also to launch
    sulogin, bug #66834.

    Fix a typo and some logic issues in new trace_dependencies().

    Whitespace cleanups in new trace_dependencies().

    Fix my own logic issue in new trace_dependencies().

  04 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    interface state directories are now created with -m 0755 to ensure that
    everyone can read them

    rc-daemon.sh now supports multiple cmds - partial fix for #98745

    trace_dependencies gets a re-write (again) to try and solve the hanging
    issues that many people are reporting

    More anal about RHS quoting

  02 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    0 timeout now means infinite for wpa_supplicant and iwconfig wrt #90443

    iwconfig no longer downs and ups the interface after a scan - instead we
    set essid any just before doing it

  01 Aug 2005; Mike Frysinger <vapier@gentoo.org>:

    Only create /dev/core if /proc/kcore exists #100978 by Timo Hirvonen.

  01 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    dhclient now has to be told it can edit dhclient.conf instead of assuming
    it. Final fix to #100745.

    Tweaked module depends to fix order when no dhcp client is found.

    rc-daemon now works with mysql - fixes #100982, thanks to bju from the
    forums.

    We now only link /etc/{resolv,ntp,yp}.conf when the file exists.
    We now link back everything in the state dir except for .sv files.

  30 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Fixed associate_order "forcepreferred" #100799, thanks to Benoit Boissinot.

  29 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Fixed dhclient sending hostname #100745, thanks to Benoit Boissinot.

  26 Jul 2005; Martin Schlemmer <azarah@gentoo.org>:
