@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2
 
+  05 Aug 2005; Roy Marples <uberlord@gentoo.org>:
+
+    Rationalise if/then/else login in runscript.sh svc_start() and svc_stop()
+
   04 Aug 2005; Martin Schlemmer <azarah@gentoo.org>:
 
     Update /sbin/rc to actually use init's single level, and also to launch
